# gb_emulator

./: .gitignore  CMakeLists.txt  readme.md
include/: cpu.h  i_cpu.h  instruction.h  opcode.h  registers.h  rom.h  types.h
src/: cpu.cpp  main.cpp  rom.cpp
